# ctoml

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: booleans.c  booleans.h  numericals.c  numericals.h  proc_stments.c  proc_stments.h  strings.c  strings.h  toml.c  toml.h  utils.c  utils.h
tests/: tester.c
